fascia/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fascia-service
  namespace: web-public
spec:
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
  type: NodePort
  selector:
    app: fascia
