fascia/ingress.yml
apiVersion: v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: fascia
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:564677439943:certificate/57deae4c-f6c3-4f3e-aaf0-185a71e7c5aa
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/security-groups: sg-07c805c0ad5e49e2e
    alb.ingress.kubernetes.io/subnets: subnet-70bbc92b,subnet-f45541dc,subnet-fa7f7fb3
  labels:
    app: fascia
spec:
  rules:
    - host: fascia.io
      http:
        paths:
          - path: /
            backend:
              serviceName: fascia-prd-target-group
              servicePort: 80
